[project]
name = "functions"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "boto3>=1.40.16",
  "botocore>=1.40.16",
  "python-dateutil>=2.8.2",
  "requests>=2.32.5",
  "sst>=0.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/functions/src"]
